# nTradeAdvance

./: .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  INSTRUCTIONS.md  README.md  build.rs
screenshots/: README.md
src/: errors.rs  main.h  main.rs  navigator.rs  prelude.rs  saves.rs
src/assets/: logo.rs  mew.rs  mod.rs  pikachu.rs
src/bindings/: mod.rs  nspireio.rs
src/platform/: console.rs  fs.rs  input.rs  mod.rs  sleep.rs
src/ui/: mod.rs  rendering.rs  theme.rs
src/ui/screens/: about_screen.rs  error_screen.rs  exit_screen.rs  menu_screen.rs  mod.rs  splash_screen.rs  trade_screen.rs
src/ui/widgets/: align.rs  border.rs  builder.rs  button.rs  column.rs  divider.rs  flexible.rs  image.rs  mod.rs  padding.rs  progress_bar.rs  row.rs  sizedbox.rs  stack.rs  text.rs
